@@ -285,6 +285,8 @@ sub compile {
   # CBuilder configs
   my $ccflags = $bconf->get_ccflags;
   
+  my $is_cplusplus = $bconf->get_is_cplusplus;
+  
   # Use all of default %Config not to use %Config directory by ExtUtils::CBuilder
   # and overwrite user configs
   my $config = $bconf->to_hash;
@@ -337,6 +339,7 @@ sub compile {
         source => $src_file,
         object_file => $object_file,
         extra_compiler_flags => $bconf->get_extra_compiler_flags,
+        'c++' => $is_cplusplus ? 1 : 0
       );
     };
     if (my $error = $@) {
