@@ -13,6 +13,7 @@
   - add SPVM::Build::Config::prepend_extra_linker_flags
   - add SPVM::Build::Config::set_is_cplusplus
   - add SPVM::Build::Config::get_is_cplusplus
+  - improve SPVM::Build::Config::new_cpp config option. use cxx.
 
 0.0701 2020-02-19
   - add SPVM::NDArray::Byte
